Allow anonymous upload endpoint