@@ -4,18 +4,16 @@ import com.socialsea.model.LoginRequest;
 import com.socialsea.model.User;
 import com.socialsea.repository.UserRepository;
 import com.socialsea.service.UserService;
+import com.socialsea.service.OtpService;
+import com.socialsea.service.EmailService;
 import com.socialsea.security.JwtUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
-import org.springframework.mail.SimpleMailMessage;
-import org.springframework.mail.javamail.JavaMailSender;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.web.bind.annotation.*;
 
-import java.util.HashMap;
 import java.util.Map;
-import java.util.Random;
 
 @RestController
 @RequestMapping("/api/auth")
@@ -29,7 +27,10 @@ public class AuthController {
     private UserRepository userRepository;
 
     @Autowired
-    private JavaMailSender mailSender;
+    private OtpService otpService;
+
+    @Autowired
+    private EmailService emailService;
 
     @Autowired
     private PasswordEncoder passwordEncoder;
@@ -37,31 +38,17 @@ public class AuthController {
     @Autowired
     private JwtUtil jwtUtil;
 
-    // Temporary OTP storage (Use Redis in production for better scalability)
-    private static final Map<String, String> otpStorage = new HashMap<>();
-
     @PostMapping("/send-otp")
-    public ResponseEntity<?> sendOtp(@RequestBody Map<String, String> request) {
-        String email = request.get("email");
+    public ResponseEntity<?> sendOtp(@RequestBody Map<String, String> body) {
+        String email = body.get("email");
         
-        if (email == null || email.trim().isEmpty()) {
+        if (email == null || email.isBlank()) {
             return ResponseEntity.badRequest().body("Email is required");
         }
 
-        // Generate a 6-digit OTP
-        String otp = String.format("%06d", new Random().nextInt(999999));
-        
-        // Store OTP temporarily
-        otpStorage.put(email, otp);
-
-        // Send OTP via Email
-        SimpleMailMessage message = new SimpleMailMessage();
-        message.setTo(email);
-        message.setSubject("Your SocialSea OTP");
-        message.setText("Your OTP code is: " + otp);
-        mailSender.send(message);
-
-        return ResponseEntity.ok("OTP sent successfully");
+        String otp = otpService.generateOtp(email);
+        emailService.sendOtpEmail(email, otp);
+        return ResponseEntity.ok("OTP sent");
     }
 
     @PostMapping("/verify-otp")
@@ -69,13 +56,11 @@ public class AuthController {
             @RequestParam String email,
             @RequestParam String otp
     ) {
-        // Verify OTP
-        String storedOtp = otpStorage.get(email);
-        if (storedOtp == null || !storedOtp.equals(otp)) {
-            return ResponseEntity.badRequest().body("Invalid or expired OTP");
+        try {
+            otpService.verifyOtp(email, otp);
+        } catch (RuntimeException e) {
+            return ResponseEntity.badRequest().body(e.getMessage());
         }
-
-        otpStorage.remove(email); // Clear OTP
 
         User user = userService.getOrCreateVerifiedUser(email);
         String role = user.getRole();
